--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
+    <body>
+        <h1>Rock, Paper, Scissors!</h1>
+        <div class="game-status">
+            <p class="results">Click rock, paper, or scissors to start!</p>
+            <p class="computer-score">Computer Score: 0</p>
+            <p class="user-score">User Score: 0</p>
+            <p></p>
+        </div>
+        <div class="choices">
+            <div id="rock">Rock</div>
+            <div id="paper">Paper</div>
+            <div id="scissors">Scissors</div>
+        </div>
+    </body>
 </html>
